lots of stuff added :)